# skcollege_database

./: .env.example  .gitignore  Cargo.toml  README.md  SECURITY.md  adr_backlog.md  bug_audit_report.md  dev_advice.md  domain_algebra.md  governance_capability_model.md  open_issues.md  plan.md  runtime_reference_architecture.md
.github/: copilot-instructions.md
.github/workflows/: public-release-guard.yml
agents/: README.md  implementer.md  reviewer.md  spec-designer.md
archive/: design_questions.md  open_issues_round1.md  open_issues_round2.md  plan_refinement_functional_architecture.md  prompt.md
data/: README.md
issues/: R2-01_incremental_propagation_watermark.md  R2-02_slack_schema_adapter.md  R2-03_identity_resolution_projection.md  R2-04_person_page_api.md  R2-05_rebuild_cost_threshold.md  R2-06_google_slides_adapter.md  R2-07_agent_sandbox.md  R2-08_projection_catalog_ux.md  README.md
openspec/: config.yaml
openspec/specs/: _index.md  adapter-policy.md  api-serving.md  dag-propagation.md  domain-kernel.md  google-slides-adapter.md  governance.md  identity-resolution.md  observation-lake.md  person-page.md  projection-engine.md  registry.md  runtime.md  slack-adapter.md  supplemental-store.md  write-back.md
scripts/: public-release-audit.ps1
src/: lib.rs
src/adapter/: config.rs  error.rs  heartbeat.rs  idempotency.rs  mod.rs  retry.rs  traits.rs
src/api/: envelope.rs  health.rs  mod.rs  pagination.rs  read_mode.rs
src/domain/: command.rs  error.rs  mod.rs  types.rs  (+3 more)
tests/: adapter_integration.rs  lane_c_integration.rs  self_host_api.rs
(+58 files in other folders)
