[package]
name = "dokp"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
jsonschema = "0.29"

[dev-dependencies]
pretty_assertions = "1"
