[package]
name = "lethe"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
jsonschema = "0.29"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.34", features = ["bundled"] }
dotenvy = "0.15"
base64 = "0.22"

[dev-dependencies]
pretty_assertions = "1"
tower = "0.5"
